--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 
 <head>
@@ -44,13 +44,12 @@
       color: #0a58ca; /* azul al pasar el mouse */
     }
   </style>
-  
 </head>
 
 <body>
 
   <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-danger">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
     <div class="container-fluid">
       <a class="navbar-brand ms-4 fw-bold" href="#">Ds-Tecnology</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -59,18 +58,19 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
-       <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav mx-auto">
-  <li class="nav-item"><a class="nav-link " href="index.html">INICIO</a></li>
-  <li class="nav-item"><a class="nav-link" href="nosotros.html">NOSOTROS</a></li>
-  <li class="nav-item"><a class="nav-link" href="servicios.html">SERVICIOS</a></li>
-  <li class="nav-item"><a class="nav-link" href="portafolio.html">PORTAFOLIO</a></li>
-   <li class="nav-item"><a class="nav-link active " href="contact.html">CONTACTO2</a></li>
-  <li class="nav-item"><a class="nav-link " href="contacto.html">CONTACTO</a></li>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav mx-auto">
+          <li class="nav-item"><a class="nav-link " href="index.html">INICIO</a></li>
+          <li class="nav-item"><a class="nav-link" href="nosotros.html">NOSOTROS</a></li>
+          <li class="nav-item"><a class="nav-link" href="servicios.html">SERVICIOS</a></li>
+          <li class="nav-item"><a class="nav-link" href="portafolio.html">PORTAFOLIO</a></li>
+          <li class="nav-item"><a class="nav-link active" href="contact.html">CONTACTO2</a></li>
+          <li class="nav-item"><a class="nav-link" href="contacto.html">CONTACTO</a></li>
         </ul>
       </div>
     </div>
   </nav>
+
   <!-- Contenido principal -->
   <main class="container my-4">
     <h2 class="text-center mb-4">
@@ -78,6 +78,7 @@
     </h2>
     <p class="text-center">Cuéntanos sobre tu proyecto y te contacto en menos de 48 horas</p>
 
+    <!-- FORMULARIO CON VALIDACIÓN -->
     <form class="needs-validation" novalidate>
       <div class="mb-3">
         <label for="campo_nombre" class="form-label">Nombre</label>
@@ -89,67 +90,76 @@
       <div class="mb-3">
         <label for="campo_email" class="form-label">Email</label>
         <input class="form-control form-control-lg" type="email" id="campo_email" required>
-        <div class="valid-feedback">E-mail registrado.</div>
-        <div class="invalid-feedback">Por favor escribe tu e-mail.</div>
+        <div class="valid-feedback">E-mail válido.</div>
+        <div class="invalid-feedback">Por favor escribe un E-mail válido.</div>
       </div>
 
       <div class="mb-3">
         <label for="campo_contraseña" class="form-label">Contraseña</label>
-        <input class="form-control form-control-lg" type="password" id="campo_contraseña" required>
+        <input class="form-control form-control-lg" type="password" id="campo_contraseña" required minlength="6">
+        <div class="valid-feedback">Contraseña aceptada.</div>
+        <div class="invalid-feedback">Debe tener al menos 6 caracteres.</div>
       </div>
 
       <div class="mb-3">
         <label for="campo_edad" class="form-label">Edad</label>
-        <input class="form-control form-control-lg" type="number" id="campo_edad" min="0" max="120">
+        <input class="form-control form-control-lg" type="number" id="campo_edad" min="1" max="120" required>
+        <div class="valid-feedback">Edad válida.</div>
+        <div class="invalid-feedback">Por favor ingresa una edad válida (1-120).</div>
       </div>
 
       <div class="mb-3">
         <label for="campo_fecha" class="form-label">Fecha de nacimiento</label>
-        <input class="form-control form-control-lg" type="date" id="campo_fecha">
+        <input class="form-control form-control-lg" type="date" id="campo_fecha" required>
+        <div class="invalid-feedback">Por favor selecciona una fecha.</div>
       </div>
 
       <div class="mb-3">
         <label for="campo_hora" class="form-label">Hora de cita</label>
-        <input class="form-control form-control-lg" type="time" id="campo_hora">
+        <input class="form-control form-control-lg" type="time" id="campo_hora" required>
+        <div class="invalid-feedback">Por favor selecciona una hora.</div>
       </div>
 
       <div class="mb-3">
         <label for="exampleColorInput" class="form-label">Escoge color</label>
-        <input type="color" class="form-control form-control-color" id="exampleColorInput" value="#563d7c"
-          title="Elige tu color">
+        <input type="color" class="form-control form-control-color" id="exampleColorInput" value="#563d7c" required>
+        <div class="invalid-feedback">Selecciona un color.</div>
       </div>
 
       <div class="mb-3">
         <label for="formFile" class="form-label">Escoger archivo</label>
-        <input class="form-control" type="file" id="formFile">
+        <input class="form-control" type="file" id="formFile" required>
+        <div class="invalid-feedback">Por favor selecciona un archivo.</div>
       </div>
 
       <div class="mb-3">
         <label for="campo_pais" class="form-label">Escoge tu país</label>
-        <select class="form-select" id="campo_pais" aria-label="Selecciona tu país">
-          <option selected>Selecciona tu país</option>
+        <select class="form-select" id="campo_pais" required>
+          <option value="">Selecciona tu país</option>
           <option value="Mexico">México</option>
           <option value="Colombia">Colombia</option>
           <option value="Argentina">Argentina</option>
         </select>
+        <div class="invalid-feedback">Selecciona un país.</div>
       </div>
 
       <div class="mb-3">
         <label for="campo_mensaje" class="form-label">Comentarios</label>
-        <textarea class="form-control form-control-lg" id="campo_mensaje" rows="4"
-          placeholder="Escribe tu mensaje aquí"></textarea>
+        <textarea class="form-control form-control-lg" id="campo_mensaje" rows="4" placeholder="Escribe tu mensaje aquí" required></textarea>
+        <div class="invalid-feedback">Por favor escribe un mensaje.</div>
       </div>
 
       <div class="mb-3">
         <label class="form-label">Género</label><br>
         <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="genero" id="genero_hombre" value="Hombre">
+          <input class="form-check-input" type="radio" name="genero" id="genero_hombre" required>
           <label class="form-check-label" for="genero_hombre">Hombre</label>
         </div>
         <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="genero" id="genero_mujer" value="Mujer">
+          <input class="form-check-input" type="radio" name="genero" id="genero_mujer" required>
           <label class="form-check-label" for="genero_mujer">Mujer</label>
         </div>
+        <div class="invalid-feedback d-block">Selecciona tu género.</div>
       </div>
 
       <div class="mb-3">
@@ -170,7 +180,8 @@
 
       <div class="mb-3">
         <label for="range1" class="form-label">Nivel de satisfacción</label>
-        <input type="range" class="form-range" id="range1">
+        <input type="range" class="form-range" id="range1" required>
+        <div class="invalid-feedback">Selecciona un nivel.</div>
       </div>
 
       <div class="form-check form-switch mb-4">
@@ -193,6 +204,29 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pumB0I0X9E7O1WrJQF+3D93oz6u+nFgHxgHhKJJKFvdFnzCvvZxV6kI8Sx66H8yx"
     crossorigin="anonymous"></script>
-</body>
 
+  <!-- Script de validación -->
+  <script>
+    (() => {
+      'use strict'
+
+      const forms = document.querySelectorAll('.needs-validation')
+
+      Array.from(forms).forEach(form => {
+        form.addEventListener('submit', event => {
+          if (!form.checkValidity()) {
+            event.preventDefault()
+            event.stopPropagation()
+          } else {
+            event.preventDefault()
+            alert('✅ Formulario enviado correctamente.')
+          }
+
+          form.classList.add('was-validated')
+        }, false)
+      })
+    })()
+  </script>
+
+</body>
 </html>
