--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="carousel-caption d-none d-md-block align-items-center justify-content-center">
         <h2 class="fw-bold">Transformamos ideas en productos digitales</h2>
         <p>Soluciones creativas en tecnología — diseño, desarrollo y estrategia.</p>
-        <a href="#" class="btn btn-danger">Nuestros servicios</a>
+        <a href="servicios.html" class="btn btn-danger">Nuestros servicios</a>
       </div>
     </div>
   </div>
